--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "restapi-eloquent-ts",
+  "name": "backend-supper",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "ts-node -r tsconfig-paths/register src/main.ts"
+    "start": "bun run dist/main.js",
+    "dev": "bun --watch  src/main.ts "
   },
   "keywords": [],
   "author": "",
@@ -13,15 +12,12 @@
   "description": "",
   "dependencies": {
     "elysia": "^1.2.25",
-    "express": "^4.21.2",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   }
 }
