update app manager

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=123123
-DB_NAME=ahwuoc
-DB_PORT=3306
+MONGODB_URL=mongodb+srv://delb1k98:07iAxtPcC0VwxELQ@cluster0.vttal.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=MjVYVzdPMVR4ZEFMc29aQzFLbnM2a3h0RXhaYzF1Qnc
